[gd_scene load_steps=4 format=3 uid="uid://btvtypfyv4qbe"]

[ext_resource type="Script" uid="uid://d2w3rr5rm08h4" path="res://scenes/game_hud.gd" id="1_uyjfr"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_csjpe"]
bg_color = Color(0.180392, 0.180392, 0.180392, 0.501961)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.305882, 0.305882, 0.305882, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6h1xk"]
bg_color = Color(0.0941176, 0.0941176, 0.0941176, 0.803922)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.686275, 0.686275, 0.686275, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="GameHUD" type="CanvasLayer"]
script = ExtResource("1_uyjfr")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 60.0
grow_horizontal = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20

[node name="Panel" type="Panel" parent="MarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_csjpe")

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HealthText" type="Label" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "100/100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HealthBar" type="ProgressBar" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 25)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
value = 100.0

[node name="ScoreText" type="Label" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Score: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameOverPanel" type="Panel" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -125.0
offset_right = 200.0
offset_bottom = 125.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_6h1xk")

[node name="VBoxContainer" type="VBoxContainer" parent="GameOverPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15
alignment = 1

[node name="GameOverLabel" type="Label" parent="GameOverPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "GAME OVER"
horizontal_alignment = 1

[node name="ScoreLabel" type="Label" parent="GameOverPanel/VBoxContainer"]
layout_mode = 2
text = "Final Score: 0"
horizontal_alignment = 1

[node name="RetryButton" type="Button" parent="GameOverPanel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "  Retry  "

[node name="QuitButton" type="Button" parent="GameOverPanel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "  Quit  "

[connection signal="pressed" from="GameOverPanel/VBoxContainer/RetryButton" to="." method="_on_retry_button_pressed"]
[connection signal="pressed" from="GameOverPanel/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
